[package]
name = "ocra"
version = "0.1.0"
authors = ["dev@lancedb.com"]
description = "OCRA: A Rust implementation of Cache in arrow-rs' ObjectStore interface"
edition = "2021"
license-file = "LICENSE"

[dependencies]
async-trait = "0.1"
bytes = "~1.9"
futures = "0.3"
log = "~0.4"
moka = { version = "~0.12", features = ["future"] }
num_cpus = "1.16"
object_store = "~0.11"
sha2 = "~0.10"
sysinfo = "0.32"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
