[package]
name = "ocra"
version = "0.1.0"
authors = ["dev@lancedb.com"]
description = "OCRA: A Rust implementation of Cache in arrow-rs' ObjectStore interface"
edition = "2021"
license-file = "LICENSE"
keywords = ["cache", "object-store", "arrow"]
categories = ["caching"]

[dependencies]
async-trait = "~0.1"
bytes = "~1.9"
futures = "~0.3"
log = "~0.4"
moka = { version = "~0.12", features = ["future"] }
num_cpus = "~1.16"
object_store = "~0.11"
sysinfo = "~0.32"
tokio = { version = "1", features = ["sync"] }

[dev-dependencies]
criterion = { version = "~0.5", features = ["async_tokio"] }
tempfile = "~3.14"
tokio = { version = "1", features = ["full"] }
rand = "~0.8"

[[bench]]
name = "memory"
harness = false
